# AICG-Hello_world

./: HYPERPARAMETERS.md  README.md  export_model.py  get_that_ai_going.ipynb  in_pytorch.ipynb  index.html  mnist_convnet.py  mnist_mlp.py  mnist_model.onnx  mnist_model.onnx.data  mnist_model_nn1.onnx  mnist_model_nn1.onnx.data  pyproject.toml  script.js  single_mnist_model_nn1.onnx  style.css
mnist_convnet/: mnist_convnet.safetensors
mnist_mlp/: mnist_mlp.safetensors
models/: nn1_model.safetensors
models/mnist_convnet_v2/: mnist_convnet_v2.js  mnist_convnet_v2.webgpu.safetensors
models/mnist_mlp_v3/: mnist_mlp_v3.js  mnist_mlp_v3.safetensors
models/mnist_mlp_v8/: mnist_mlp_v8.js  mnist_mlp_v8.webgpu.safetensors
nn1/: nn1.js  nn1.webgpu.safetensors
