[project]
name = "aicg-b-a-ba"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dawn",
    "numpy>=2.3.4",
    "onnx>=1.19.1",
    "onnxscript>=0.5.6",
    "tinygrad>=0.11.0",
    "torchvision>=0.24.0",
    "tqdm>=4.67.1",
]
